elk/ingress-route-es.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: es-dashboard-route
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  # 这里设置你的域名
    - match: Host(`es.li.com`)
      kind: Rule
      services:
        - name: quickstart-es-http
          port: 9200
  tls:
    secretName: https
