elk/ingress-route-kibana.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana-dashboard-route
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  # 这里设置你的域名
    - match: Host(`kibana.k3s.com`)
      kind: Rule
      services:
        - name: quickstart-kb-http
          port: 5601
  tls:
    secretName: https
